--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -101,7 +101,7 @@
 				This is a modern live streaming server. It supports: 
 			</p>
 			<ul class='u5 circle'>
-				<li>RTMP, RTSP (TCP), HTTP-FLV, HTTP-fMP4, MPEG-DASH, HLS</li>
+				<li>RTMP, RTSP (TCP), HTTP/WS-FLV, HTTP/WS-fMP4, MPEG-DASH, HLS</li>
 				<li>FLV Recording (Remote Controllable), Live Playback</li>
 				<li>WebSocket Chat (Danmu)</li>
 				<li>Event Report</li>
@@ -170,7 +170,7 @@
 				<li>1031-3868-7381-0446-4614</li>
 				<li>1031-7323-0463-2336-2410</li>
 				<li class='deletion'>1031-6686-5722-7535-4774</li>
-				<li>1031-9276-8109-8226-4292</li>
+				<li class='deletion'>1031-9276-8109-8226-4292</li>
 			</ul>
 			
 			<h3>Clients</h3>
