--- a/about.html
+++ b/about.html
@@ -88,7 +88,8 @@
 		<section>
 			<p>
 				公众号：STUDEASE<br/>
-				QQ群：528109813
+				QQ群：528109813<br/>
+				Skype: live:670292548
 			</p>
 			
 			<p>"We love working on programmer. It feels like a puzzle and that we're both creating and solving at the same time."</p>
