--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 			<div class='ol-status' style='width: 100%; max-width: 640px;'>
 				<label>Online: </label>
 				<span id='ol-users'>0</span>
-				<i>&nbsp;&nbsp;&nbsp;&nbsp;公众号：STUDEASE&nbsp;&nbsp;&nbsp;&nbsp;QQ群：528109813</i>
+				<i>&nbsp;&nbsp;&nbsp;&nbsp;公众号：STUDEASE&nbsp;&nbsp;&nbsp;&nbsp;QQ群：528109813&nbsp;&nbsp;&nbsp;&nbsp;Skype: live:670292548</i>
 			</div>
 			<div id='chatwrap' style='width: 100%; max-width: 640px; height: 400px;'>
 				<div id='chat'></div>
