--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -94,7 +94,8 @@
 				[source] <a href='https://github.com/studease/rtmpmate' target='_blank'>https://github.com/studease/rtmpmate</a><br/>
 				[中文] <a href='https://blog.csdn.net/icysky1989/article/details/88946642' target='_blank'>https://blog.csdn.net/icysky1989/article/details/88946642</a><br/>
 				公众号：STUDEASE<br/>
-				QQ群：528109813
+				QQ群：528109813<br/>
+				Skype: live:670292548
 			</p>
 			
 			<p>
