--- a/slicease.html
+++ b/slicease.html
@@ -94,7 +94,8 @@
 				[source] <a href='https://github.com/studease/slicease' target='_blank'>https://github.com/studease/slicease</a><br/>
 				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/39624155' target='_blank'>http://blog.csdn.net/icysky1989/article/details/39624155</a><br/>
 				公众号：STUDEASE<br/>
-				QQ群：528109813
+				QQ群：528109813<br/>
+				Skype: live:670292548
 			</p>
 			
 			<p>
