--- a/solutions.html
+++ b/solutions.html
@@ -107,7 +107,7 @@
 			<div class='ol-status'>
 				<label>Online: </label>
 				<span id='ol-users'>0</span>
-				<i>&nbsp;&nbsp;&nbsp;&nbsp;公众号：STUDEASE&nbsp;&nbsp;&nbsp;&nbsp;QQ群：528109813</i>
+				<i>&nbsp;&nbsp;&nbsp;&nbsp;公众号：STUDEASE&nbsp;&nbsp;&nbsp;&nbsp;QQ群：528109813&nbsp;&nbsp;&nbsp;&nbsp;Skype: live:670292548</i>
 			</div>
 			
 			<div class='samplewrap'>
