--- a/chatease.html
+++ b/chatease.html
@@ -96,7 +96,8 @@
 				[source] <a href='https://github.com/studease/chatease' target='_blank'>https://github.com/studease/chatease</a><br/>
 				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a><br/>
 				公众号：STUDEASE<br/>
-				QQ群：528109813
+				QQ群：528109813<br/>
+				Skype: live:670292548
 			</p>
 			
 			<p>
