--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -155,9 +155,9 @@
 			
 			<h3 style='margin: 20px 0 0 0; display: inline-block;'>Static Builds</h3>
 			<ul class='u5 square'>
-				x86:<br/>
-				<li>Windows: <a href='static/rtmpmate-win32-latest.zip'>rtmpmate-win32-latest.zip</a></li>
-				<li>Linux: <a href='static/rtmpmate-linux-latest.zip'>rtmpmate-linux-latest.zip</a></li>
+				<li>Windows: <a href='static/rtmpmate-windows-x86_64-latest.zip'>rtmpmate-windows-x86_64-latest.zip</a></li>
+				<li>CentOS: <a href='static/rtmpmate-centos-x86_64-latest.zip'>rtmpmate-centos-x86_64-latest.zip</a></li>
+				<li>Debian: <a href='static/rtmpmate-debian-x86_64-latest.zip'>rtmpmate-debian-x86_64-latest.zip</a></li>
 			</ul>
 			
 			<h3>CDKeys for Free</h3>
