--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -158,13 +158,14 @@
 				<li>Windows: <a href='static/rtmpmate-windows-x86_64-latest.zip'>rtmpmate-windows-x86_64-latest.zip</a></li>
 				<li>CentOS: <a href='static/rtmpmate-centos-x86_64-latest.zip'>rtmpmate-centos-x86_64-latest.zip</a></li>
 				<li>Debian: <a href='static/rtmpmate-debian-x86_64-latest.zip'>rtmpmate-debian-x86_64-latest.zip</a></li>
+				<li>MacOS: <a href='static/rtmpmate-macos-x86_64-latest.zip'>rtmpmate-macos-x86_64-latest.zip</a></li>
 			</ul>
 			
 			<h3>CDKeys for Free</h3>
 			<ul class='u5 square white'>
 				<li class='deletion'>1031-9276-8109-8226-4292</li>
 				<li class='deletion'>1031-4292-0781-0315-6349</li>
-				<li>1031-9818-4656-4110-5434</li>
+				<li class='deletion'>1031-9818-4656-4110-5434</li>
 				<li class='deletion'>1031-4564-1074-4211-6767</li>
 				<li>1031-3171-4745-6729-3840</li>
 				<li>1031-2627-3062-4770-3450</li>
