--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -167,7 +167,7 @@
 				<li class='deletion'>1031-4292-0781-0315-6349</li>
 				<li class='deletion'>1031-9818-4656-4110-5434</li>
 				<li class='deletion'>1031-4564-1074-4211-6767</li>
-				<li>1031-3171-4745-6729-3840</li>
+				<li class='deletion'>1031-3171-4745-6729-3840</li>
 				<li>1031-2627-3062-4770-3450</li>
 				<li>1031-5535-5137-8978-3598</li>
 				<li>1031-2465-6923-4816-6569</li>
