--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -107,9 +107,9 @@ a:active, a:focus, a:hover {
 			aspectratio: '16:9',
 			//file: '/vod/sample.mp4',
 			sources: [{
-				file: 'ws://118.190.79.29/live/_definst_/stream02.flv',
+				file: 'http://118.190.79.29/live/_definst_/stream02.flv',
 				type: 'flv',
-				label: 'WS-FLV'
+				label: 'HTTP-FLV'
 			}, {
 				file: 'ws://118.190.79.29/live/_definst_/stream02',
 				type: 'fmp4',
