--- a/solutions.html
+++ b/solutions.html
@@ -237,9 +237,9 @@
 			aspectratio: '16:9',
 			//file: '/vod/sample.mp4',
 			sources: [{
-				file: 'ws://118.190.79.29/live/_definst_/stream02.flv',
+				file: 'http://118.190.79.29/live/_definst_/stream02.flv',
 				type: 'flv',
-				label: 'WS-FLV'
+				label: 'HTTP-FLV'
 			}, {
 				file: 'ws://118.190.79.29/live/_definst_/stream02',
 				type: 'fmp4',
