--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -154,12 +154,9 @@
 			</ul>-->
 			
 			<h3 style='margin: 20px 0 0 0; display: inline-block;'>Static Builds</h3>
-			<ul class='u5 square'>
-				<li>Windows: <a href='static/rtmpmate-windows-x86_64-latest.zip'>rtmpmate-windows-x86_64-latest.zip</a></li>
-				<li>CentOS: <a href='static/rtmpmate-centos-x86_64-latest.zip'>rtmpmate-centos-x86_64-latest.zip</a></li>
-				<li>Debian: <a href='static/rtmpmate-debian-x86_64-latest.zip'>rtmpmate-debian-x86_64-latest.zip</a></li>
-				<li>MacOS: <a href='static/rtmpmate-macos-x86_64-latest.zip'>rtmpmate-macos-x86_64-latest.zip</a></li>
-			</ul>
+			<p>
+				<a href='https://github.com/studease/rtmpmate/releases'>Download Page</a>
+			</p>
 			
 			<h3>CDKeys for Free</h3>
 			<ul class='u5 square white'>
