--- a/solutions.html
+++ b/solutions.html
@@ -258,7 +258,7 @@
 				label: 'HLS'
 			}],
 			mode: 'live',
-			bufferTime: 2,
+			bufferTime: .1,
 			maxRetries: 0,
 			controls: true,
 			autoplay: false,
