--- a/cms/v1.html
+++ b/cms/v1.html
@@ -154,7 +154,7 @@
 				mode: 'live',
 				controls: false,
 				doubleClick: 'fullpage',
-				autoplay: true,
+				autoplay: false,
 				logo: {
 					visible: false
 				},
