--- a/cms/index.html
+++ b/cms/index.html
@@ -116,6 +116,7 @@
 				// file: 'ws://120.79.67.102:4022/ws?port=10077&app=live&stream=64921778277_channel_1',
 				file: url || '',
 				module: 'FLV',
+				objectfit: 'fill',
 				loader: {
 					name: 'auto',
 					mode: 'cors',        // cors, no-cors, same-origin
